--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@types/lodash": "^4.14.138",
+    "@types/react-helmet": "^5.0.10",
     "bulma": "^0.7.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.66",
@@ -14,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-typescript": "^2.1.8",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
