--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "target": "es2015" /* or at least ES2015 */,
     "module": "es2015" /* or at least ES2015 */,
     "lib": ["es2015", "dom"] /* <-- required! */,
