--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react-helmet": "^5.0.10",
     "bulma": "^0.7.0",
     "classnames": "^2.2.6",
-    "gatsby": "^2.9.2",
+    "gatsby": "2.15.29",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
