--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "bulma": "^0.7.0",
     "classnames": "^2.2.6",
     "gatsby": "2.15.29",
-    "gatsby-image": "^2.0.23",
+    "gatsby-image": "2.2.24",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.15",
-    "gatsby-plugin-ts": "^2.0.1",
+    "gatsby-plugin-ts": "2.0.1",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -27,7 +27,7 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "moment": "^2.24.0",
-    "netlify-cms": "^2.4.2",
+    "netlify-cms-app": "2.9.7",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
