--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sharp": "2.2.28",
     "gatsby-plugin-ts": "2.0.1",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
@@ -23,7 +23,7 @@
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.1.15",
-    "gatsby-transformer-sharp": "^2.1.9",
+    "gatsby-transformer-sharp": "2.2.20",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "moment": "^2.24.0",
