--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.4.1",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-helmet": "^5.2.0",
     "typescript": "^3.6.3",
     "uuid": "^3.2.1"
